# kair_algorithms_draft

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  docker_train.sh  package.xml
launch/: open_manipulator_cam_env.launch  open_manipulator_demo.launch  open_manipulator_env.launch  vel_kinematics.launch  yumi_gazebo_vel.launch
msg/: GoalObs.msg
scripts/: dxl_read_write.py  dynamixel_read_write.py  gazebo_test_open_manipulator.py  iSight_clamp.stl  requirements-dev.txt  requirements.txt  run_cagct.py  run_lunarlander_continuous.py  run_open_manipulator_demo.py  run_open_manipulator_reacher_v0.py  run_reacher_v1.py  run_reacher_v2.py  test_lstm.py  utils.py
scripts/algorithms/common/: helper_functions.py  noise.py
scripts/algorithms/ddpg/: agent.py
scripts/algorithms/fd/: ddpg_agent.py  sac_agent.py  td3_agent.py
scripts/algorithms/per/: ddpg_agent.py
scripts/algorithms/sac/: agent.py
scripts/algorithms/td3/: agent.py
scripts/config/dynamixel/: config.py
scripts/config/environment/: cagct.py  open_manipulator.py  utils.py
scripts/data/: lunarlander_continuous_demo.pkl  reacher_demo.pkl
scripts/demo/open_manipulator/: config.py  open_manipulator_demo_collector.py  pos_read_write.py  utils.py
scripts/envs/: __init__.py
urdf/: camera.urdf.xacro  open_manipulator.urdf  open_manipulator_cam.urdf.xacro  open_manipulator_with_cam.urdf  open_manipulator_with_cam.urdf.xacro  rethink_electric_gripper.xacro  sawyer.urdf  sawyer_base.gazebo.xacro  sawyer_electric_gripper.urdf.xacro
urdf/block/: model.urdf
(+38 files in other folders)
